# Degrees_CS50sIntroductionAI-Project0_JoseGregorioDortaLuis

./: .gitignore  README.md  pyproject.toml
degrees/: degrees.py
