[tool.poetry]
name = "degrees-cs50sintroductionai-project0-josegregoriodortaluis"
version = "0.1.0"
description = ""
authors = ["Jose Dorta Luis"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
